ajout de casse tete

--- a/site/a-propos.html
+++ b/site/a-propos.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="nouveaux-jeux.html">Nouveautés</a></li>
+                <li><a href="./nouvreau-jeux.html">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html" class="active">À propos</a></li>
