--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="nouveaux-jeux.html">Nouveautés</a></li>
+                <li><a href="./jeux-populaires.html">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html" class="active">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html">À propos</a></li>
