--- a/site/jeu-details.html
+++ b/site/jeu-details.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - GameHub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <link rel="stylesheet" href="style/jeu-details.css">
+   <link rel="stylesheet" href="./style/jeu-details.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="nouveaux-jeux.html">Nouveautés</a></li>
+                <li><a href="./nouvreau-jeux.html">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html" class="active">À propos</a></li>
@@ -266,6 +266,6 @@
         </div>
     </footer>
 
-    <script src="script/jeu-details.js"></script>
+    <script src="./script/jeu.details.js"></script>
 </body>
 </html>
