--- a/site/jeux-populaires.html
+++ b/site/jeux-populaires.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux Populaires - GameHub</title>
-    <link rel="stylesheet" href="style/jeu-populaires.css">
+    <link rel="stylesheet" href="./style/jeu-populaires.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="nouveaux-jeux.html">Nouveautés</a></li>
+                <li><a href="./nouvreau-jeux.html">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html" class="active">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html">À propos</a></li>
@@ -66,6 +66,6 @@
         </div>
     </footer>
 
-    <script src="script/jeu-populaires.js"></script>
+    <script src="./script/jeu-populaires.js"></script>
 </body>
 </html>
