--- a/site/nouvreau-jeux.html
+++ b/site/nouvreau-jeux.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nouveaux Jeux - GameHub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style/nouveaux-jeux.css">
+    <link rel="stylesheet" href="./style/nouveau.jeux.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="nouveaux-jeux.html" class="active">Nouveautés</a></li>
+                <li><a href="nouvreau-jeux.html" class="active">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html">À propos</a></li>
@@ -51,6 +51,6 @@
         </div>
     </footer>
 
-    <script src="script/nouveaux-jeux.js"></script>
+    <script src="./script/nouveau-jeux.js"></script>
 </body>
 </html>
