--- a/site/index.html
+++ b/site/index.html
@@ -32,13 +32,15 @@
         </div>
         <div class="filters">
             <button class="filter-btn active">Tous</button>
-            <button class="filter-btn" data-category="action">Action</button>
-            <button class="filter-btn" data-category="aventure">Aventure</button>
+            <button class="filter-btn" data-category="cartes">Cartes</button>
+            <button class="filter-btn" data-category="devinette">Devinette</button>
             <button class="filter-btn" data-category="stratégie">Stratégie</button>
-            <button class="filter-btn" data-category="puzzle">Puzzle</button>
-            <button class="filter-btn" data-category="sport">Sport</button>
-            <button class="filter-btn" data-category="course">Course</button>
-            <button class="filter-btn" data-category="multijoueur">Multijoueur</button>
+            <button class="filter-btn" data-category="réflexion">Réflexion</button>
+            <button class="filter-btn" data-category="arcade">Arcade</button>
+            <button class="filter-btn" data-category="éducatif">éducatif</button>
+            <button class="filter-btn" data-category="course">Cours</button>
+            <button class="filter-btn" data-category="classique">Classique</button>
+            <button class="filter-btn" data-category="memorie">Mémorie</button>
         </div>
     </div>
 
