--- a/site/categorie/memorie.html
+++ b/site/categorie/memorie.html
@@ -290,9 +290,9 @@
                 title: "Memory",
                 description: "Retrouvez les paires de cartes identiques en mémorisant leur emplacement.",
                 category: "mémoire",
-                image: "../img/memory.jpg",
+                image: "/img/memory.jpg",
                 rating: 4.6,
-                link: "../jeu_classique/memory/memory.html"
+                link: "/jeu_classique/memory/memory.html"
             },
         ];
 
