--- a/jeu_devinette/mot_de_passe/mot_de_passe.html
+++ b/jeu_devinette/mot_de_passe/mot_de_passe.html
@@ -67,36 +67,20 @@
                         <i class="fas fa-chevron-down dropdown-icon"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a href="#" class="dropdown-item" data-category="all"><i class="fas fa-th-list"></i> Tous les jeux</a></li>
-                        <li><a href="../jeu_de_carte/blackjack/blackjack.html" class="dropdown-item" data-category="cartes"><i class="fas fa-cards"></i> Jeux de cartes</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="devinette"><i class="fas fa-question"></i> Jeux de devinette</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="strategie"><i class="fas fa-chess"></i> Stratégie</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="reflexion"><i class="fas fa-brain"></i> Réflexion</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="arcade"><i class="fas fa-joystick"></i> Arcade</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="educatif"><i class="fas fa-graduation-cap"></i> Éducatif</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="cours"><i class="fas fa-book"></i> Cours</a></li>
-                        <li><a href="#" class="dropdown-item" data-category="classique"><i class="fas fa-history"></i> Classique</a></li>
+                        <li><a href="/site/categorie/carte.html" class="dropdown-item" data-category="cartes"><i class="fas fa-cards"></i> Jeux de cartes</a></li>
+                        <li><a href="/site/categorie/devinette.html" class="dropdown-item" ><i class="fas fa-question"></i> Jeux de devinette</a></li>
+                        <li><a href="/site/categorie/strategie.html" class="dropdown-item" ><i class="fas fa-chess"></i> Stratégie</a></li>
+                        <li><a href="/site/categorie/reflexion.html" class="dropdown-item" ><i class="fas fa-brain"></i> Réflexion</a></li>
+                        <li><a href="/site/categorie/arcade.html" class="dropdown-item" ><i class="fas fa-joystick"></i> Arcade</a></li>
+                        <li><a href="/site/categorie/educatif.html" class="dropdown-item" ><i class="fas fa-graduation-cap"></i> Éducatif</a></li>
+                        <li><a href="/site/categorie/course.html" class="dropdown-item" ><i class="fas fa-book"></i> Cours</a></li>
+                        <li><a href="/site/categorie/classique.html" class="dropdown-item" ><i class="fas fa-history"></i> Classique</a></li>
+                        <li><a href="/site/categorie/memorie.html" class="dropdown-item" ><i class="fas fa-history"></i> Mémorie</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </nav>
-
-    <!-- Barre de filtres (à placer dans votre contenu principal, PAS dans la nav) 
-    <div class="filters-container">
-        <div class="filters">
-            <button class="filter-btn active" data-category="all">Tous</button>
-            <button class="filter-btn" data-category="cartes">Cartes</button>
-            <button class="filter-btn" data-category="devinette">Devinette</button>
-            <button class="filter-btn" data-category="strategie">Stratégie</button>
-            <button class="filter-btn" data-category="reflexion">Réflexion</button>
-            <button class="filter-btn" data-category="arcade">Arcade</button>
-            <button class="filter-btn" data-category="educatif">Éducatif</button>
-            <button class="filter-btn" data-category="cours">Cours</button>
-            <button class="filter-btn" data-category="classique">Classique</button>
-        </div>
-    </div>
-    -->
 </body>
 <div class="game-container">
     <h1>🔐 Devine le Mot de Passe</h1>
@@ -115,7 +99,6 @@
 </div>
 <script src="/nav.js"></script>
 <script src="mot_de_passe.js"></script>
-<script src="/site/script/script.js"></script>
 </body>
 
 </html>
