--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,8 @@
                 <span>GameHub</span>
             </div>
             <ul class="nav-links">
-                <li><a href="../index.html">Accueil</a></li>
-                <li><a href="./jeux-populaires.html">Nouveautés</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="./nouvreau-jeux.html">Nouveautés</a></li>
                 <li><a href="jeux-populaires.html" class="active">Populaires</a></li>
                 <li><a href="categories.html">Catégories</a></li>
                 <li><a href="a-propos.html">À propos</a></li>
